# arrowly

./: .dependency-cruiser.cjs  .gitignore  AGENTS.md  CLAUDE.md  GLOSSARY.md  README.md  index.html  package.json  skills-lock.json  tsconfig.json  vitest.config.ts
.agent-sync/: check.sh
.agents/: README.md
.claude/: launch.json
.claude/skills/: build-prototype  draft-plan  publish  shape-idea
.codex/environments/: environment.toml
.github/workflows/: release.yml  test.yml
docs/: ARCHITECTURE.md  PLAN.md  RELEASE.md  REQUIREMENTS.md  SIGNING.md  TESTING.md
docs/decisions/: 0001-two-stage-escape-during-text-editing.md  0002-pointer-ping-carries-its-own-contrast.md
scripts/: gen-icons.sh  reset-onboarding.ts  rust-coverage.sh
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  hotkey.rs  i18n.rs  lib.rs  main.rs  overlay.rs  shortcut_policy.rs  shortcuts.rs  state.rs  store.rs  tray.rs
src/onboarding/: MiniCanvas.test.tsx  MiniCanvas.tsx  OnboardingApp.test.tsx  OnboardingApp.tsx  mini-canvas.test.tsx  mini-canvas.tsx  onboarding-app.test.tsx  onboarding-app.tsx
src/overlay/: DrawingCanvas.test.tsx  DrawingCanvas.tsx  Marker.test.tsx  Marker.tsx  OverlayApp.test.tsx  OverlayApp.tsx  TextEditor.test.tsx  TextEditor.tsx  cursor.test.ts  cursor.ts  drawing-canvas.test.tsx  drawing-canvas.tsx  freehand-tool-live-stroke-icon.tsx  live-text-size-icon.tsx  mark-interaction.test.ts  mark-interaction.ts  marker.test.tsx  (+22 more)
test/: canvas.ts  setup.ts
(+53 files in other folders)
