[package]
name = "arrowly"
version = "0.1.0"
description = "macOS 화면 주석 오버레이"
authors = ["toy-crane"]
edition = "2021"

[lib]
name = "arrowly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
