[package]
name = "arrowly"
version = "0.2.0"
description = "macOS screen annotation overlay"
authors = ["toy-crane"]
edition = "2021"

[lib]
name = "arrowly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
